--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer id="footer">
-    <p>Authors: <strong><a href="{{ site.author_link }}" target="_blank">{{ site.author }}</a></strong></p>
-    <p class="legal">{{ site.author_description }}</p>
+    <p><strong><a href="{{ site.author_link }}" target="_blank">{{ site.author }}</a></strong></p>
+    <p class="legal">{{ site.author_description }}, authors.</p>
 </footer>
