--- a/_includes/post.html
+++ b/_includes/post.html
@@ -3,7 +3,7 @@
         <a href="{{ include.post.url | prepend: site.baseurl }}">
             <h1 class="post-title">{{ include.post.title }}</h1>
         </a>
-		<p style="font-weight: bold">{{ include.post.author }}</p><br/>
+		<p class="post-title">{{ include.post.author }}</p><br/>
 		
         <time datetime="{{ include.post.date | date_to_xmlschema }}" class="post-date">{{ include.post.date | date: "%A, %B %-d, %Y" }}</time>
     </header>
