--- a/_sass/modules/post/_variables.scss
+++ b/_sass/modules/post/_variables.scss
@@ -1,6 +1,7 @@
 $post-line-height: 1.6;
 
 $post-title-min-font-size: 24px;
+$post-author-min-font-size: 18px;
 $post-title-medium-font-size: 5vw;
 $post-title-max-font-size: 42px;
 // To transition smoothly from our middle font-size of 5vw, we
