--- a/_sass/modules/post/_variables.scss
+++ b/_sass/modules/post/_variables.scss
@@ -12,6 +12,7 @@ $post-author-max-font-size: 24px;
 // (note the calculation is done in reverse to remind us that we are using
 // a value of 5%, or 0.05)
 $post-title-medium-breakpoint: $post-title-min-font-size / 0.05;
+$post-author-medium-breakpoint: $post-author-min-font-size / 0.05;
 
 $post-image-split-max-width: 365px;
 $post-image-split-gutter: 20px;
