--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer id="footer">
-    <p><strong><a href="{{ site.author_link }}" target="_blank">{{ site.author }}</a></strong></p>
+    <p><strong><a href="{{ site.author_link }}" target="_blank">{{ site.title }}</a></strong></p>
+	<p><strong>{{ site.author }}</strong></p>
     <p class="legal">{{ site.author_description }}, authors.</p>
 </footer>
