--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,5 @@
     <p><strong><a href="{{ site.author_link }}" target="_blank">{{ site.title }}</a></strong></p>
 	<p><strong>{{ site.author }}</strong></p>
     <p class="legal">{{ site.author_description }}, authors.</p>
+	<p>Published by <a href="http://hybrid.pub">Hybrid Pedagogy Publishing</a>, Robin Wharton and Kris Shaffer, editors.</p>
 </footer>
