footer remove dude

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,13 +42,14 @@
     margin-top: 50px;
     text-align: center;
 
-    &::after {
-//        @include retina-background-image($img-dude);
+/*    &::after {
+        @include retina-background-image($img-dude);
         display: block;
         content: "";
         width: 65px;
         height: 158px;
         margin: 20px auto 50px;
+	*/
     }
 
     a {
