--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,4 +3,5 @@
 	<p class="legal">{{ site.author }}</p>
     <p class="legal">{{ site.author_description }}, authors.</p>
 	<p class="legal">Published by <a href="http://hybrid.pub">Hybrid Pedagogy Publishing</a>, Robin Wharton and Kris Shaffer, editors.</p>
+	<p><small>Banner image by <a href="https://www.flickr.com/photos/mbeo52/6258315856/">mbeo</a>.</small></p>
 </footer>
