--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,11 +12,11 @@
         // Font is included from Google Fonts automatically unless a custom banner is used
         // See _config.yml for details
         font-family: $banner-font-family;
-        font-size: 24px;
+        font-size: 30px;
         font-weight: 400;
         text-align: center;
         letter-spacing: 0.03em;
-        color: #fefefe;
+        color: #ffffff;
         position: absolute;
         bottom: 20px;
         width: 100%;
