--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,7 +18,7 @@
         letter-spacing: 0.03em;
         color: #ffffff;
         position: absolute;
-        text-shadow: 2px 2px #ff0000;
+        text-shadow: 2px 2px #000000;
 		bottom: 20px;
         width: 100%;
     }
