--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,8 +19,9 @@
         color: #ffffff;
         position: absolute;
         text-shadow: 2px 2px #000000;
-		bottom: 20px;
+    		bottom: 20px;
         width: 100%;
+        text-decoration: none;
     }
 
     &::after {
