--- a/_sass/modules/post/_rules.scss
+++ b/_sass/modules/post/_rules.scss
@@ -32,7 +32,6 @@
 
         // Force default text colour [as post-header is wrapped by a link]
         color: $text-color;
-        text-decoration: none;
 
         @include min-breakpoint($post-title-medium-breakpoint) {
             font-size: $post-title-medium-font-size;
@@ -41,6 +40,10 @@
         @include min-breakpoint($desktop-breakpoint) {
             font-size: $post-title-max-font-size;
         }
+    }
+
+    .post-title a {
+      text-decoration: none;
     }
 
     .post-author {
