--- a/_sass/modules/post/_rules.scss
+++ b/_sass/modules/post/_rules.scss
@@ -46,6 +46,10 @@
       text-decoration: none;
     }
 
+    h1 a {
+      text-decoration: none;
+    }
+
     .post-author {
         font-family: $title-font-family;
         display: block;
